# scholar-ai-agent-01

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  TEMPLATE.md  coordinator.py  debug_citations.py  demo_results.json  main.py  package-lock.json  pyproject.toml  requirements.txt  run_scholar_ai.py  test_fixed_citations.py
.claude/: settings.local.json
.cursor/: mcp.json
.mdc/: pocketflow-rules.md
agents/: __init__.py  coordinator_agent.py  research_synthesis_agent.py  web_search_agent.py
cache/: 05dac735d47a27163fbbdb5ad6980454_metadata.json  05dac735d47a27163fbbdb5ad6980454_references.json  05dac735d47a27163fbbdb5ad6980454_sections.json  05dac735d47a27163fbbdb5ad6980454_text.json  89fd50cf19339c5e63d2c2db3522f950_metadata.json  89fd50cf19339c5e63d2c2db3522f950_references.json  89fd50cf19339c5e63d2c2db3522f950_sections.json  89fd50cf19339c5e63d2c2db3522f950_text.json  a0b09678bbcb8c67438c69717a16f2c1_metadata.json  a0b09678bbcb8c67438c69717a16f2c1_text.json
config/: __init__.py  settings.py
docs/: api-reference.md  architecture.md  design.md  developer-guide.md  documentation-updates-needed.md  flow-design.md  implementation-log.md
examples/: test_coordinator_workflow.py  test_llm_analysis.py  test_pdf_extraction.py  test_presentation_ui.py  test_research_synthesis_agent.py  test_scholar_search.py  test_state_management.py  test_web_search_agent.py
nodes/: __init__.py  coordinator_nodes.py  research_synthesis_nodes.py  web_search_nodes.py
test_cache/: 295740cd73c2c14cd0ca51b0b77f0df6_metadata.json  (+71 more)
tests/: __init__.py  (+12 more)
(+16 files in other folders)
